Add Alimentary system

--- a/corpus/wormatlas/Handbook - Introduction.html
+++ b/corpus/wormatlas/Handbook - Introduction.html
@@ -224,7 +224,7 @@ excretory pore (<a href="#IntroFIG4C">IntroFIG4C</a> and <a href="https://www.wo
        <span class="picturetitle style2"> IntroFIG 3: Scanning electron microscopy (SEM) images of adult <em>C. elegans</em> and various body regions. </span><span class="style2"><strong>A.</strong>	Adult hermaphrodite lying on its right lateral side. (<em>Arrowhead</em>) Lip; (<em>arrow</em>); tail, (<em>thin arrow</em>)
  the vulva at midbody. (Image reprinted with permission: Juergen Berger 
 and Ralf Sommer, Max Planck-Institute for Developmental Biology, 
-Tübingen, Germany.)
+Tï¿½bingen, Germany.)
         <strong>B.</strong>	Alimentary canal opens to outside through anus at ventral midline (<em>arrowhead</em>). Magnification: 2300x. Scale bar: 10 &#956;m. (Image source: SEM [Hall] 4605.)
         <strong>C.</strong>	Outside surface of cuticle on the lateral 
 side bearing circumferential ridges (annuli) and furrows. Alae form over
@@ -359,7 +359,7 @@ shed.  During this period, pharyngeal pumping ceases and the animal
 enters a brief lethargus (<a href="#IntroFIG6">IntroFIG 6</a>; <a href="#IntroMOVIE2">IntroMOVIE 2</a>).</p>
        <div align="center"><a href="https://www.wormatlas.org/hermaphrodite/introduction/IMAGES/introfig6leg.htm" target="_blank"><img src="Handbook%20-%20Introduction_files/introfig6lr.jpg" alt="IntroFIG 6 Life cycle of C. elegans at 22 degrees C" name="IntroFIG6" width="700" height="537" border="0" align="middle" class="Galborder" id="IntroFIG6"></a><a name="IntroFIG6" id="IntroFIG6"></a> <span class="picturename">
         	</span></div>
-  <span class="picturetitle style2"> IntroFIG 6: Life cycle of <em>C. elegans</em> at 22°C. </span><span class="style2">0
+  <span class="picturetitle style2"> IntroFIG 6: Life cycle of <em>C. elegans</em> at 22ï¿½C. </span><span class="style2">0
   min is fertilization. Numbers in blue along the arrows indicate the 
 length of  time the animal spends at a certain stage. First cleavage 
 occurs at about 40  min. post-fertilization. Eggs are laid outside at 
@@ -372,10 +372,10 @@ micrometers (&#956;m).</span>
     <source src="Handbook%20-%20Introduction_files/intromovie2.mp4" type="video/mp4">
   </video>
   <br>
-  <span class="picturetitle style2">IntroMOVIE 2: Time-lapse video of <em>C. elegans </em>development. </span> <span class="style2">Brightfield images of 20 individuals are shown in a grid from hatching until young adulthood <span class="style2 style1">(see <a href="https://www.wormatlas.org/aging/introduction/Images/aintrovid5leg.htm" target="_blank">AIntroVID 5</a> for video of same animals from adulthood to death)</span>. Images were acquired at 5× magnification, using a custom culture apparatus (<a href="#Zhang2016">Zhang et al., 2016</a>)
- maintained at 25°C. Specific life stages (L1-L4, pre-reproductive and 
+  <span class="picturetitle style2">IntroMOVIE 2: Time-lapse video of <em>C. elegans </em>development. </span> <span class="style2">Brightfield images of 20 individuals are shown in a grid from hatching until young adulthood <span class="style2 style1">(see <a href="https://www.wormatlas.org/aging/introduction/Images/aintrovid5leg.htm" target="_blank">AIntroVID 5</a> for video of same animals from adulthood to death)</span>. Images were acquired at 5ï¿½ magnification, using a custom culture apparatus (<a href="#Zhang2016">Zhang et al., 2016</a>)
+ maintained at 25ï¿½C. Specific life stages (L1-L4, pre-reproductive and 
 reproductive adulthood) are denoted by the colored bars. These 
-individuals are of genotype <em><a href="https://wormbase.org/species/c_elegans/gene/WBGene00004963#0-9g-3" target="_blank">spe-9</a>(hc88)</em>, and at the restrictive temperature of 25°C lay unfertilized oocytes. (Video source Z. Pincus.)</span>
+individuals are of genotype <em><a href="https://wormbase.org/species/c_elegans/gene/WBGene00004963#0-9g-3" target="_blank">spe-9</a>(hc88)</em>, and at the restrictive temperature of 25ï¿½C lay unfertilized oocytes. (Video source Z. Pincus.)</span>
   <hr class="page-splits">
   <div align="center"><a href="https://www.wormatlas.org/hermaphrodite/introduction/IMAGES/introtable2leg.htm" target="_blank"><br>
 					<img src="Handbook%20-%20Introduction_files/introtable2.jpg" alt="IntroTABLE 2 Structure of the sensilla" name="IntroTABLE1" width="326" height="593" border="0" align="middle" class="Galborder" id="IntroTABLE2"></a><a name="IntroTABLE2" id="IntroTABLE2"></a> </div>
@@ -385,15 +385,15 @@ individuals are of genotype <em><a href="https://wormbase.org/species/c_elegans/
     <td align="left" background="Handbook%20-%20Introduction_files/mainframe.htm" class="style1"><p><strong><a name="Embryo31" id="Embryo31"></a><span class="style13"><br>
 3.1 Embryo </span></strong>
     </p><p>Embryogenesis in <em>C. elegans</em> is  roughly divided into two stages: (1) proliferation and (2)  organogenesis/ morphogenesis (<a href="#IntroFIG7">IntroFIG 7</a>) (<a href="#Sulston1983">Sulston et al, 1983</a>).
- Proliferation (0 to 330-350 min post-fertilization at 22°C) includes 
+ Proliferation (0 to 330-350 min post-fertilization at 22ï¿½C) includes 
 cell divisions from a single cell to about 550 essentially  
-undifferentiated cells by the end of the “16 E stage” (<a href="#Vonehrenstein1980">von Ehrenstein and  Schierenberg, 1980</a>; <a href="#Wood1988b">Wood, 1988b</a>).
+undifferentiated cells by the end of the ï¿½16 E stageï¿½ (<a href="#Vonehrenstein1980">von Ehrenstein and  Schierenberg, 1980</a>; <a href="#Wood1988b">Wood, 1988b</a>).
  This stage is further subdivided into two  phases: The first phase 
 (0-150 min) spans the time between zygote formation  to generation of 
 embryonic founder cells, and the second phase (150-350 min)  covers the 
 bulk of cell divisions and gastrulation until the beginning of  
 organogenesis (<a href="#Bucher1994">Bucher and Seydoux, 1994</a>). The 
-initial  150 min of proliferation takes place within the mother’s 
+initial  150 min of proliferation takes place within the motherï¿½s 
 uterus, and the embryo  is laid outside when it reaches the approximate 
 30-cell stage (at gastrulation).  There is considerable rearrangement of
  cells in the proliferation stage because of short-range shuffling, and 
@@ -415,7 +415,7 @@ organogenesis/morphogenesis stage (5.5-6 hr to 12-14 hr), terminal
 differentiation of cells occurs without many additional cell divisions, 
 and the embryo  elongates threefold and takes form as an animal with 
 fully differentiated  tissues and organs. Morphogenesis starts with the 
-“lima bean” stage. The first  muscle twitches are observed at 430 min 
+ï¿½lima beanï¿½ stage. The first  muscle twitches are observed at 430 min 
 after the first cell cleavage (between 1.5-  and 2-fold stages) (<a href="#IntroFIG7">IntroFIG 7</a>).
  Sexual dimorphism becomes visible for the first time at 510 minutes 
 when the cephalic companion neurons (CEMs) die in the hermaphrodite, and
@@ -426,11 +426,11 @@ advanced motor system development. The embryo starts pharyngeal  pumping
  at 760 min after the first cell cleavage and hatches at 800 min (<a href="#Vonehrenstein1980">von  Ehrenstein and Schierenberg, 1980</a>; <a href="#Sulston1983">Sulston et al, 1983</a>; <a href="#Bird1991">Bird and Bird, 1991</a>).</p>
 <p>The main body plan of the animal is already  established at the end 
 of embryogenesis. This general body plan does not change during 
-postembryonic  development.		</p>
+postembryonic  development.		</p> 
     	<div align="center"><a href="https://www.wormatlas.org/hermaphrodite/introduction/IMAGES/introfig7leg.htm" target="_blank"><img src="Handbook%20-%20Introduction_files/introfig7lr.jpg" alt="IntroFIG 7 Embryonic stages of development" name="IntroFIG7" border="0" align="middle" class="Galborder" id="IntroFIG7"></a><a name="IntroFIG7" id="IntroFIG7"></a></div>
 		<span class="picturetitle style2">IntroFIG 7: Embryonic stages of development.</span><span class="style2">
  Numbers below the horizontal axis show approximate time in minutes 
-after fertilization at 20-22°C. First cleavage occurs approximately 40 
+after fertilization at 20-22ï¿½C. First cleavage occurs approximately 40 
 minutes after fertilization. (<em>Yellow-green bars</em>) Period of time
  during which cells from a certain lineage migrate towards inside of the
  embryo. The first cells that move inwards from the ventral surface are 
@@ -587,7 +587,7 @@ deferens to the outside (<a href="#Sulston1988">Sulston, 1988</a>; <a href="#Ant
 ventral hook and post-cloacal sensilla (<a href="#Emmons1997">Emmons and Sternberg,  1997</a>).<br>
     	<u><a name="Adult326"></a><br>
     	</u><strong>3.2.6 Adult</strong></p>
-        <p>At approximately at 45-50 hrs  posthatch at 22°C-25°C, a 
+        <p>At approximately at 45-50 hrs  posthatch at 22ï¿½C-25ï¿½C, a 
 newly matured hermaphrodite lays its first  eggs, hence completing its 
 3-day reproductive life cycle (<a href="#Byerly1976">Byerly et al., 1976</a>; <a href="#Lewis1995">Lewis and Fleming,  1995</a>).
  The adult hermaphrodite produces oocytes for about  4 days, and after 
@@ -720,7 +720,7 @@ Introduction. In<em> WormAtlas</em>. <a href="http://dx.doi.org/10.3908/wormatla
 <!-- COPYRIGHT -->
 <table cellpadding="6" cellspacing="0" border="0" width="100%"><tbody><tr><td align="left" valign="top">
 
-<script language="JavaScript" type="text/javascript" src="Handbook%20-%20Introduction_files/copyrightWACSH.js"></script><span class="footer">©Copyright 2024 WormAtlas (Cold Spring Harbor Laboratory Press) All Rights Reserved<br></span><br>
+<script language="JavaScript" type="text/javascript" src="Handbook%20-%20Introduction_files/copyrightWACSH.js"></script><span class="footer">ï¿½Copyright 2024 WormAtlas (Cold Spring Harbor Laboratory Press) All Rights Reserved<br></span><br>
 
 </td><td align="right" valign="top">
 
